--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,26 @@
 ---
-title: ""
+title: "Daiil Jun"
+about:
+  template: jolla
+  image: Daiil_pic.jpg
+  links:
+    - icon: person-workspace
+      text: Health Behavior Tech Lab
+      href: https://fazzinolab.ku.edu/
+    - icon: person-workspace
+      text: AffCom Lab
+      href: https://affcom.ku.edu/  
+    - icon: google
+      text: Google Scholar
+      href: https://scholar.google.com/citations?user=t6o0sOoAAAAJ&hl=en&oi=ao
+    - icon: envelope
+      text: Email
+      href: "mailto:jdaiil@ku.edu"
+    - icon: file-person-fill
+      text: CV
+      href: Academic_CV_2025_DJ.pdf
 ---
 
-# This is home
+Welcome to my website!
+
+I am Daiil (pronounced Dale) who is currently a Ph.D student in Clinical Psychological Science at the University of Kansas. Currently, I am under dual mentorship from Dr. Fazzino and Dr. Girard. My research interest is to understand the transdiagnostic mechanisms of reward dysfunction that bridge maladaptive eating, substance use, and serious mental illness (SMI). My long-term goal is to leverage this understanding to develop real-time, personalized monitoring tools that can enhance psychiatric assessment and enable preemptive interventions. 
