--- a/publications.bib
+++ b/publications.bib
@@ -20,25 +20,6 @@
 	file = {Full Text PDF:C\:\\Users\\d497j944\\Zotero\\storage\\S9G444PP\\Fazzino et al. - US tobacco companies selectively disseminated hype.pdf:application/pdf;Full Text PDF:C\:\\Users\\d497j944\\Zotero\\storage\\4H5KDJTE\\Fazzino et al. - 2024 - US tobacco companies selectively disseminated hyper-palatable foods into the US food system Empiric.pdf:application/pdf;Snapshot:C\:\\Users\\d497j944\\Zotero\\storage\\ZBMQ3IZQ\\add.html:text/html},
 }
 
-@misc{rips-goodwin_us_2024,
-	title = {{US} {Infant} {Formulas} {Contain} {Primarily} {Added} {Sugars}: {An} {Analysis} of the {Infant} {Formulas} on the {US} {Market}},
-	copyright = {https://creativecommons.org/licenses/by/4.0/legalcode},
-	shorttitle = {{US} {Infant} {Formulas} {Contain} {Primarily} {Added} {Sugars}},
-	url = {https://osf.io/vhkeu},
-	doi = {10.31234/osf.io/vhkeu},
-	abstract = {Objective: Consumption of added sugars is contraindicated for infants {\textless}2 years old due to potentially harmful metabolic effects. However, recent research revealed that most US-produced infant formulas contain added sugars. The current study examined the proportion of added sugars in US infant formulas to determine whether US formulas contain primarily added sugars, which may present a risk to infant metabolic health, or whether formulas contain primarily naturally occurring lactose (the sugar present in human breast milk).
-Methods: Data were obtained from the Nutrition Data System for Research and represented US the infant formula market as of 2022 (N=73). Formulas were categorized into three mutually exclusive types by their marketing labels: standard (n=31), gentle (n=27), and lactose-free (n=15). The proportion of added sugars from each type of sugar was calculated, as was the percent of naturally occurring lactose. Differences across formula types were examined using Bayesian modeling.
-Results: The median percent added sugars was high in standard (M=59.7\%; IQR=22.0), gentle (M=85.0\%; IQR=39.5), and lactose-free formulas (M=90.0\%; IQR=54.3). Gentle formulas had significantly lower proportional lactose (OR=0.22, 95\% HDI=[0.11, 0.44], pd=99.3\%) and had {\textgreater}2 fold higher proportional added sugar contents compared to standard formulas (ORs=2.11 to 2.57, 95\% HDI {\textgreater} 0, pd=99.1-99.99\%). Lactose-free formulas had 4-8 times higher proportional sucrose (OR=8.92, 95\% HDI=[3.86, 20.8], pd=100\%) and maltose (OR=4.91, 95\% HDI=[2.51, 9.56], pd=100\%) relative to standard and gentle formulas (sucrose 95\% CI=[-1.67, -0.26], maltose 95\% CI=[-0.35, -0.04]).
-Conclusions: Most infant formulas on the US market contained primarily added sugars.},
-	language = {en},
-	urldate = {2025-02-20},
-	publisher = {PsyArXiv},
-	author = {Rips-Goodwin, Audrey and Jun, Daiil and Griebel-Thompson, Adrianne and Kong, Kai Ling and Fazzino, Tera},
-	month = nov,
-	year = {2024},
-	file = {PDF:C\:\\Users\\d497j944\\Zotero\\storage\\YL7RZS2R\\Rips-Goodwin et al. - 2024 - US Infant Formulas Contain Primarily Added Sugars An Analysis of the Infant Formulas on the US Mark.pdf:application/pdf},
-}
-
 @article{jun_role_2025,
 	title = {The role of hyper-palatable foods in energy intake measured using mobile food photography methodology},
 	volume = {57},
@@ -109,4 +90,63 @@ The findings supported the premise that HPF themselves may yield greater energy 
 	year = {2025},
 	note = {Publisher: Frontiers},
 	keywords = {chocolate, differential item functioning, food craving, Food Craving Inventory, item response theory, sex difference},
+}
+
+@article{rips-goodwin_us_2025,
+	title = {{US} infant formulas contain primarily added sugars: {An} analysis of infant formulas on the {US} market},
+	volume = {141},
+	issn = {0889-1575},
+	shorttitle = {{US} infant formulas contain primarily added sugars},
+	url = {https://www.sciencedirect.com/science/article/pii/S0889157525001838},
+	doi = {10.1016/j.jfca.2025.107369},
+	abstract = {Added sugar consumption is contraindicated for infants {\textless} 2 years old; however added sugars are present in many US infant formulas. We examined whether US formulas contain primarily added sugars, or whether formulas contain primarily naturally occurring lactose (the sugar in human milk). Data were obtained from the Nutrition Data System for Research and included formulas available on the US market in 2022 (N = 73). Formulas were categorized as: standard (n = 31), gentle (n = 27), and lactose-free (n = 15). Differences across formulas were examined using Bayesian modeling. The median percent added sugars were high in standard (M=59.7 \%; IQR=22.0), gentle (M=85.0 \%; IQR=39.5), and lactose-free formulas (M=90.0 \%; IQR=54.3). Gentle formulas had significantly lower proportional lactose (OR=0.22, 95 \% HDI=[0.11,0.44], pd=99.3 \%) and {\textgreater} 2 fold higher proportional added sugars compared to standard formulas (ORs=2.11–2.57, HDI{\textgreater}0, pd=99.1–99.99 \%). Lactose-free formulas had 4–8 times higher proportional sucrose (OR=8.92, HDI=[3.86,20.8], pd=100 \%) and maltose (OR=4.91, HDI=[2.51,9.56], pd=100 \%) relative to standard and gentle formulas. Five formulas contained primarily (70–90 \%) naturally occurring lactose. In conclusion, most US infant formulas contain primarily added sugars. However, the presence of five formulas containing primarily naturally occurring lactose demonstrates that such formulations are feasible to produce; such formulas should be made more widely available to help promote infant health.},
+	urldate = {2025-09-17},
+	journal = {Journal of Food Composition and Analysis},
+	author = {Rips-Goodwin, Audrey R. and Jun, Daiil and Griebel-Thompson, Adrianne and Kong, Kai Ling and Fazzino, Tera L.},
+	month = may,
+	year = {2025},
+	keywords = {Fructose, Lactose-reduced, Newborn, Sucrose, Toddler},
+	pages = {107369},
+	file = {ScienceDirect Full Text PDF:C\:\\Users\\d497j944\\Zotero\\storage\\LT6NBYWS\\Rips-Goodwin et al. - 2025 - US infant formulas contain primarily added sugars An analysis of infant formulas on the US market.pdf:application/pdf;ScienceDirect Snapshot:C\:\\Users\\d497j944\\Zotero\\storage\\X2YGW8XI\\S0889157525001838.html:text/html},
+}
+
+@article{chapa_eating-disorder_2022,
+	title = {Eating-disorder psychopathology in female athletes and non-athletes: {A} meta-analysis},
+	volume = {55},
+	copyright = {© 2022 Wiley Periodicals LLC.},
+	issn = {1098-108X},
+	shorttitle = {Eating-disorder psychopathology in female athletes and non-athletes},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/eat.23748},
+	doi = {10.1002/eat.23748},
+	abstract = {Objective There is ongoing discussion about whether sports participation is a risk or protective factor for eating disorders (EDs). Research is mixed, with some studies suggesting that athletes have higher mean levels of ED psychopathology compared to nonathletes, while other studies suggest the opposite effect or no differences. The purpose of the current meta-analysis was to identify whether female athletes reported higher mean levels of ED psychopathology compared to nonathletes. Method Following PRISMA guidelines, we identified 56 studies that reported ED psychopathology for female athletes and nonathletes. A three-level random-effects model of between- and within-study variance was completed for the following outcome variables: overall ED psychopathology, body dissatisfaction, drive for thinness, restricting, and loss-of-control eating. Results Athletes reported lower levels of body dissatisfaction compared to nonathletes (g = −.21, p {\textless} .0001). Athletes and nonathletes reported similar levels of overall ED psychopathology, drive for thinness, restricting, and loss-of-control eating on average. Sport type significantly moderated standardized mean difference effect sizes of ED psychopathology in athletes versus nonathletes. Effect sizes comparing levels of drive for thinness, restricting, and loss-of-control eating in athletes versus nonathletes were larger for studies with athletes participating in aesthetic/lean sports compared to nonaesthetic/nonlean sports. Discussion Findings from this meta-analysis could inform future ED prevention and treatment in female athletes by providing further evidence that athletes in aesthetic/lean sports may report higher levels of ED psychopathology. Participating in nonaesthetic/nonlean sports may be a protective factor for experiencing less body dissatisfaction. Public Significance Statement The current meta-analysis summarized findings from 56 studies that assessed levels of disordered eating, body dissatisfaction, dietary restricting, and loss-of-control eating in female athletes and nonathletes. Athletes reported lower levels of body dissatisfaction compared to nonathletes, highlighting that participation in sport could have some protective factors. Athletes participating in sports that require weight categories (e.g., judo) and sports that emphasize thinness/leanness (e.g., gymnastics and distance running) had higher levels of disordered eating relative to athletes participating in other types of sports that do not emphasize thinness/leanness (e.g., volleyball and basketball).},
+	language = {en},
+	number = {7},
+	urldate = {2025-09-17},
+	journal = {International Journal of Eating Disorders},
+	author = {Chapa, Danielle A. N. and Johnson, Sarah N. and Richson, Brianne N. and Bjorlie, Kayla and Won, Ying Q. and Nelson, Sarah V. and Ayres, Joseph and Jun, Daiil and Forbush, Kelsie T. and Christensen, Kara A. and Perko, Victoria L.},
+	year = {2022},
+	note = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/eat.23748},
+	keywords = {athletes, body dissatisfaction, disordered eating, eating disorders, females, loss of control, meta-analysis, restraint, restricting, review},
+	pages = {861--885},
+	file = {Full Text PDF:C\:\\Users\\d497j944\\Zotero\\storage\\LMSHWW8I\\Chapa et al. - 2022 - Eating-disorder psychopathology in female athletes and non-athletes A meta-analysis.pdf:application/pdf;Snapshot:C\:\\Users\\d497j944\\Zotero\\storage\\X8QU9SGF\\eat.html:text/html},
+}
+
+@article{jun_examination_2025-1,
+	title = {Examination of hyper-palatable foods and their nutrient characteristics using globally crowdsourced data},
+	volume = {20},
+	issn = {1932-6203},
+	url = {https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0325479},
+	doi = {10.1371/journal.pone.0325479},
+	abstract = {Hyper-palatable foods (HPF), characterized by specific nutrient combinations at moderate to high levels (e.g., fat and sodium), have been suggested to increase energy intake and obesity risk due to their strong reinforcing properties. The study examined patterns in HPF availability, nutrient characteristics, and overlap with ultra-processed foods (UPF) across countries from a globally crowdsourced, open-source dataset. Food data (N = 314229 food items) from 17 countries were analyzed. Compared to the US, foods from most European countries examined, as well as Canada and Mexico, were significantly less likely to be identified as HPF (ORs = 0.70 to 0.93) and had lower \% of calories from fat, sugar, starchy carbohydrates, and sodium compared to HPF items from the US (ORs = 0.76 to 0.98). Across countries, items identified as HPF substantially exceeded HPF threshold criteria by 70–229\%. Foods identified as being both HPF and ultra-processed foods ranged from 33\% (Bulgaria) to 50\% (US). Overall, findings from 17 countries across Europe, North America, and South America highlighted foods from the US as being more likely to be hyper-palatable relative to most other countries examined. Results highlighted variability in the degree to which foods met criteria as HFP and UPF across countries.},
+	language = {en},
+	number = {6},
+	urldate = {2025-09-17},
+	journal = {PLOS ONE},
+	author = {Jun, Daiil and Knowles, Kelly and Fazzino, Tera L.},
+	month = jun,
+	year = {2025},
+	note = {Publisher: Public Library of Science},
+	keywords = {Carbohydrates, Fats, Food, Meat, Medical risk factors, Nutrients, Obesity, United States},
+	pages = {e0325479},
+	file = {Full Text PDF:C\:\\Users\\d497j944\\Zotero\\storage\\E9T93T5Q\\Jun et al. - 2025 - Examination of hyper-palatable foods and their nutrient characteristics using globally crowdsourced.pdf:application/pdf},
 }
