--- a/publications.bib
+++ b/publications.bib
@@ -131,22 +131,23 @@ The findings supported the premise that HPF themselves may yield greater energy 
 	file = {Full Text PDF:C\:\\Users\\d497j944\\Zotero\\storage\\LMSHWW8I\\Chapa et al. - 2022 - Eating-disorder psychopathology in female athletes and non-athletes A meta-analysis.pdf:application/pdf;Snapshot:C\:\\Users\\d497j944\\Zotero\\storage\\X8QU9SGF\\eat.html:text/html},
 }
 
-@article{jun_examination_2025-1,
-	title = {Examination of hyper-palatable foods and their nutrient characteristics using globally crowdsourced data},
+@article{jun_associations_2023,
+	title = {Associations between {Alcohol}-{Free} {Sources} of {Reinforcement} and the {Frequency} of {Alcohol} and {Cannabis} {Co}-{Use} among {College} {Freshmen}},
 	volume = {20},
-	issn = {1932-6203},
-	url = {https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0325479},
-	doi = {10.1371/journal.pone.0325479},
-	abstract = {Hyper-palatable foods (HPF), characterized by specific nutrient combinations at moderate to high levels (e.g., fat and sodium), have been suggested to increase energy intake and obesity risk due to their strong reinforcing properties. The study examined patterns in HPF availability, nutrient characteristics, and overlap with ultra-processed foods (UPF) across countries from a globally crowdsourced, open-source dataset. Food data (N = 314229 food items) from 17 countries were analyzed. Compared to the US, foods from most European countries examined, as well as Canada and Mexico, were significantly less likely to be identified as HPF (ORs = 0.70 to 0.93) and had lower \% of calories from fat, sugar, starchy carbohydrates, and sodium compared to HPF items from the US (ORs = 0.76 to 0.98). Across countries, items identified as HPF substantially exceeded HPF threshold criteria by 70–229\%. Foods identified as being both HPF and ultra-processed foods ranged from 33\% (Bulgaria) to 50\% (US). Overall, findings from 17 countries across Europe, North America, and South America highlighted foods from the US as being more likely to be hyper-palatable relative to most other countries examined. Results highlighted variability in the degree to which foods met criteria as HFP and UPF across countries.},
+	copyright = {http://creativecommons.org/licenses/by/3.0/},
+	issn = {1660-4601},
+	url = {https://www.mdpi.com/1660-4601/20/4/2884},
+	doi = {10.3390/ijerph20042884},
+	abstract = {Co-use of alcohol and cannabis is common among young adults in the United States. A behavioral economics framework indicates that greater engagement in substance-free sources of reinforcement may be protective against co-use frequency. The current study tested the association between proportionate alcohol-free reinforcement and the frequency of co-use among college freshmen. Participants (N = 86) were freshmen who enrolled in a freshman orientation course and completed surveys at the beginning of the semester. Past month alcohol use, cannabis use, and reinforcement from alcohol-free and alcohol-involved activities were assessed. A zero-inflated Poisson regression was used to test the association between proportionate alcohol-free reinforcement and days of co-use. The results indicated that proportionate alcohol-free reinforcement was negatively associated with co-use days in the count model when controlling for alcohol use days and gender as covariates (β: −3.28, p = 0.016). Proportionate alcohol-free reinforcement did not significantly differentiate individuals who did not engage in co-use in the zero-inflated model (β: −1.68, p = 0.497). The study suggested that greater proportionate alcohol-free reinforcement may be associated with lower engagement in the co-use of alcohol and cannabis among young adults. Increasing engagement in alcohol-free sources of reinforcement may be considered a target for co-use prevention or harm reduction efforts.},
 	language = {en},
-	number = {6},
+	number = {4},
 	urldate = {2025-09-17},
-	journal = {PLOS ONE},
-	author = {Jun, Daiil and Knowles, Kelly and Fazzino, Tera L.},
-	month = jun,
-	year = {2025},
-	note = {Publisher: Public Library of Science},
-	keywords = {Carbohydrates, Fats, Food, Meat, Medical risk factors, Nutrients, Obesity, United States},
-	pages = {e0325479},
-	file = {Full Text PDF:C\:\\Users\\d497j944\\Zotero\\storage\\E9T93T5Q\\Jun et al. - 2025 - Examination of hyper-palatable foods and their nutrient characteristics using globally crowdsourced.pdf:application/pdf},
+	journal = {International Journal of Environmental Research and Public Health},
+	author = {Jun, Daiil and Fazzino, Tera L.},
+	month = jan,
+	year = {2023},
+	note = {Publisher: Multidisciplinary Digital Publishing Institute},
+	keywords = {alcohol, behavioral economics, co-use, heavy drinking, marijuana, young adults},
+	pages = {2884},
+	file = {Full Text:C\:\\Users\\d497j944\\Zotero\\storage\\9M9GYQYA\\Jun and Fazzino - 2023 - Associations between Alcohol-Free Sources of Reinforcement and the Frequency of Alcohol and Cannabis.pdf:application/pdf},
 }
