--- a/index.qmd
+++ b/index.qmd
@@ -21,6 +21,6 @@ about:
       href: https://raw.githubusercontent.com/jdaiil/website/main/Academic_CV_2025_DJ.pdf
 ---
 
-Welcome to my website!
+### Welcome!
 
-I am Daiil (pronounced Dale) who is currently a Ph.D student in Clinical Psychological Science at the University of Kansas. Currently, I am under dual mentorship from Dr. Fazzino and Dr. Girard. My research interest is to understand the transdiagnostic mechanisms of reward dysfunction that bridge maladaptive eating, substance use, and serious mental illness (SMI). My long-term goal is to leverage this understanding to develop real-time, personalized monitoring tools that can enhance psychiatric assessment and enable preemptive interventions.
+I am Daiil (pronounced Dale) who is a Ph.D Candidate in Clinical Psychological Science program at the University of Kansas. Currently, I am under dual mentorship from [Dr. Fazzino](https://fazzinolab.ku.edu/people/tera-fazzino) and [Dr. Girard](https://psychology.ku.edu/people/jeffrey-girard). My research interest is to understand the transdiagnostic mechanisms of reward dysfunction that bridge maladaptive eating, substance use, and serious mental illness (SMI). My long-term goal is to leverage this understanding to develop real-time, personalized monitoring tools that can enhance psychiatric assessment and enable preemptive interventions.
