--- a/publications.bib
+++ b/publications.bib
@@ -15,7 +15,7 @@
 	author = {Fazzino, Tera L. and Jun, Daiil and Chollet-Hinton, Lynn and Bjorlie, Kayla},
 	year = {2024},
 	note = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/add.16332},
-	keywords = {Addictive food, fat, food environment, formulation, policy regulation, sodium},
+	keywords = {fat, Addictive food, food environment, formulation, policy regulation, sodium},
 	pages = {62--71},
 	file = {Full Text PDF:C\:\\Users\\d497j944\\Zotero\\storage\\S9G444PP\\Fazzino et al. - US tobacco companies selectively disseminated hype.pdf:application/pdf;Full Text PDF:C\:\\Users\\d497j944\\Zotero\\storage\\4H5KDJTE\\Fazzino et al. - 2024 - US tobacco companies selectively disseminated hyper-palatable foods into the US food system Empiric.pdf:application/pdf;Snapshot:C\:\\Users\\d497j944\\Zotero\\storage\\ZBMQ3IZQ\\add.html:text/html},
 }
@@ -39,7 +39,7 @@ The findings supported the premise that HPF themselves may yield greater energy 
 	author = {Jun, Daiil and Girard, Jeffrey M. and Martin, Corby K. and Fazzino, Tera L.},
 	month = apr,
 	year = {2025},
-	keywords = {Bayesian multilevel modeling, Ecological momentary assessment, Overeating, Satiation},
+	keywords = {Ecological momentary assessment, Overeating, Satiation, Bayesian multilevel modeling},
 	pages = {101983},
 	file = {ScienceDirect Full Text PDF:C\:\\Users\\d497j944\\Zotero\\storage\\KQVSVH3M\\Jun et al. - 2025 - The role of hyper-palatable foods in energy intake measured using mobile food photography methodolog.pdf:application/pdf;ScienceDirect Snapshot:C\:\\Users\\d497j944\\Zotero\\storage\\SB7D5ALM\\S1471015325000431.html:text/html},
 }
@@ -59,7 +59,7 @@ The findings supported the premise that HPF themselves may yield greater energy 
 	month = jun,
 	year = {2025},
 	note = {Publisher: Public Library of Science},
-	keywords = {Carbohydrates, Fats, Food, Meat, Medical risk factors, Nutrients, Obesity, United States},
+	keywords = {United States, Obesity, Food, Fats, Carbohydrates, Nutrients, Medical risk factors, Meat},
 	pages = {e0325479},
 	file = {Full Text PDF:C\:\\Users\\d497j944\\Zotero\\storage\\9U2BV9RK\\Jun et al. - 2025 - Examination of hyper-palatable foods and their nutrient characteristics using globally crowdsourced.pdf:application/pdf},
 }
@@ -89,7 +89,7 @@ The findings supported the premise that HPF themselves may yield greater energy 
 	month = jun,
 	year = {2025},
 	note = {Publisher: Frontiers},
-	keywords = {chocolate, differential item functioning, food craving, Food Craving Inventory, item response theory, sex difference},
+	keywords = {food craving, chocolate, item response theory, differential item functioning, Food Craving Inventory, sex difference},
 }
 
 @article{rips-goodwin_us_2025,
@@ -126,7 +126,7 @@ The findings supported the premise that HPF themselves may yield greater energy 
 	author = {Chapa, Danielle A. N. and Johnson, Sarah N. and Richson, Brianne N. and Bjorlie, Kayla and Won, Ying Q. and Nelson, Sarah V. and Ayres, Joseph and Jun, Daiil and Forbush, Kelsie T. and Christensen, Kara A. and Perko, Victoria L.},
 	year = {2022},
 	note = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/eat.23748},
-	keywords = {athletes, body dissatisfaction, disordered eating, eating disorders, females, loss of control, meta-analysis, restraint, restricting, review},
+	keywords = {disordered eating, eating disorders, restricting, meta-analysis, review, athletes, body dissatisfaction, females, loss of control, restraint},
 	pages = {861--885},
 	file = {Full Text PDF:C\:\\Users\\d497j944\\Zotero\\storage\\LMSHWW8I\\Chapa et al. - 2022 - Eating-disorder psychopathology in female athletes and non-athletes A meta-analysis.pdf:application/pdf;Snapshot:C\:\\Users\\d497j944\\Zotero\\storage\\X8QU9SGF\\eat.html:text/html},
 }
@@ -147,7 +147,23 @@ The findings supported the premise that HPF themselves may yield greater energy 
 	month = jan,
 	year = {2023},
 	note = {Publisher: Multidisciplinary Digital Publishing Institute},
-	keywords = {alcohol, behavioral economics, co-use, heavy drinking, marijuana, young adults},
+	keywords = {alcohol, young adults, behavioral economics, co-use, heavy drinking, marijuana},
 	pages = {2884},
 	file = {Full Text:C\:\\Users\\d497j944\\Zotero\\storage\\9M9GYQYA\\Jun and Fazzino - 2023 - Associations between Alcohol-Free Sources of Reinforcement and the Frequency of Alcohol and Cannabis.pdf:application/pdf},
+}
+
+@misc{girard_sentiment_2025,
+	title = {Sentiment {Analysis} of {Naturalistic} {Speech} {Using} {Open}-{Weight} {Large} {Language} {Models}},
+	url = {https://osf.io/n7vrc_v1},
+	doi = {10.31234/osf.io/n7vrc_v1},
+	abstract = {Artificial intelligence is increasingly used to analyze emotion in text, but its performance on naturalistic speech remains poorly understood. We evaluated 20 large language models (LLMs), ranging from 1 to 120 billion parameters, on their ability to estimate fine-grained sentiment in transcripts of naturalistic speech. All models were open-weight, meaning their parameters are publicly available and can be run locally without reliance on cloud services. Two datasets were used: the Stanford Emotional Narratives Dataset, autobiographical stories from community participants, and the Bipolar Longitudinal Study, daily audio journals from outpatients with severe mental illness. Human sentiment ratings served as the reference, and models were benchmarked against both individual human agreement and lexicon-based tools (LIWC, VADER). Results showed a three-tier accuracy pattern: small models performed at or below baseline tools, mid-sized models (7-30 billion parameters) matched human agreement, and larger or optimized models exceeded it. Accuracy improved with scaling up to {\textasciitilde}12 billion, after which gains plateaued, highlighting diminishing returns beyond mid-sized architectures. Performance was robust to transcription source, indicating AI transcription error did not impair accuracy. Fairness analyses showed overall accuracy was equitable across demographic groups, though modest disparities appeared in prediction consistency by participant race and education. These findings demonstrate that recent open-weight LLMs can match or surpass human-level performance in sentiment analysis of naturalistic speech while running efficiently on affordable workstation hardware. These advances open opportunities for studying emotional dynamics in daily life and developing privacy-preserving tools for clinical research.},
+	language = {en-us},
+	urldate = {2025-09-18},
+	publisher = {OSF},
+	author = {Girard, Jeffrey and Jun, Daiil and Ong, Desmond and Liebenthal, Einat and Baker, Justin},
+	month = sep,
+	year = {2025},
+	note = {tex.preprint: https://osf.io/whatever},
+	keywords = {Artificial Intelligence, Natural Language Processing, Sentiment Analysis},
+	file = {OSF Preprint:C\:\\Users\\d497j944\\Zotero\\storage\\WZUDGRMA\\Girard et al. - 2025 - Sentiment Analysis of Naturalistic Speech Using Open-Weight Large Language Models.pdf:application/pdf},
 }
